@@ -166,6 +166,18 @@ class tx_solr_Util {
 	}
 
 	/**
+	 * Lowercases the first letter of a string.
+	 *
+	 * @param	string	String to lowercase the first letter
+	 * @return	string	Input string with lowercased first letter
+	 */
+	public static function lcfirst($string) {
+		$string{0} = strtolower($string{0});
+
+		return $string;
+	}
+
+	/**
 	 * Shortcut to retrieve the configuration for EXT:solr from TSFE
 	 *
 	 * @return array	Solr configuration
